# AI_RESEARCHER_AGENT

./: .env  README.md  ai_researcher.py  ai_researcher_2.py  arxiv_tool.py  frontend.py  pyproject.toml  read_pdf.py  requirements.txt  write_pdf.py
output/: paper_20251002_000848.tex  paper_20251002_002759.tex  paper_20251002_002856.tex
